	 win32display.c,win32display.h,picture.c,win32keyboard.c,options.pl,
	 Makefile.am,win32keyboard.h}: Win32: Refactored win32 ui code to
	 resemble gtk ui, applied minor fixes: fixed debugger's Break button,
	 added static wherever applicable to options*.pl, fixed compiler
	 warnings in ui_error_specific and win32ui_picture functions (Marek).
20080723 ui/win32/fileselector.c: Win32: Added fileselector.c to win32 ui as
	 part of refactoring the ui (Marek).
20080724 ui/win32/win32ui.c: Win32: continuing refactoring: moved WM_SIZE
	 handler into a new function win32ui_window_resize, and WM_SIZING
	 handler into a new function win32ui_window_resizing (Marek).
20080724 ui/win32/{win32ui.c,win32internals.h,win32display.c}: Win32:
	 Refactored win32 ui sizing functions to resemble gtk ui: removed
	 win32display_resize(), renamed win32display_resize_update() to
	 win32display_drawing_area_resize(), overwritten the contents of
	 win32display_drawing_area_resize() with the contents of gtk ui's
	 drawing_area_resize() (Marek).
20080724 ui/win32/{win32ui.c,win32internals.h,win32display.c}: Win32: win32 ui
	 refactoring continued: added static wherever applicable, moved
	 WM_PAINT handler into a new function win32ui_window_paint, moved
	 WM_CREATE handler into ui_init, moved most of WinMain into ui_init,
	 changed uidisplay_init be exactly the same one as on gtk ui, changes
	 to win32display_area to have more similar structure to that of gtk
	 ui's (Marek).
20080724 ui/win32/win32display.c: Win32: win32 ui refactoring: removed
	 register_scalers_noresize and win32display_setsize, replaced
	 uidisplay_hotswap_gfx_mode with the code from gtk ui (Marek).
20080725 ui/win32/{win32ui.c,win32display.c}: Win32: Refactored WM_PAINT
	 handler, fixed crash when the screen is resized to 3x, fixed unclosed
	 handle to the drawing area (Marek).
20080728 utils.c: add missing return.
20080728 ui/win32/statusbar.c: Win32: implemented transparency for the status
	 bar icons (Marek).