@@ -94,6 +94,8 @@ if test "$win32" = yes; then
   AC_CHECK_HEADER(windows.h,
                   LIBS="$LIBS -mwindows -lcomctl32";
                   AC_DEFINE([UI_WIN32], 1, [Defined if Win32 UI in use])
+                  AC_DEFINE([WINVER], 0x0400, [Minimal supported version of Windows is 95 or NT4])
+                  AC_DEFINE([_WIN32_IE], 0x400, [Internet Explorer is 4.0 or higher is required])
                   UI=win32; UI_LIBS="ui/win32/libuiwin32.a",
                   AC_MSG_ERROR([Win32 UI not found]))
 fi
