@@ -57,7 +57,7 @@ BEGIN
   PUSHBUTTON	"&Single Step", IDC_DBG_BTN_STEP, 274, 217, 56, 13
   PUSHBUTTON	"&Continue", IDC_DBG_BTN_CONT, 336, 217, 56, 13
   PUSHBUTTON	"&Break", IDC_DBG_BTN_BREAK, 398, 217, 56, 13
-  PUSHBUTTON	"&Close", IDC_DBG_BTN_CLOSE, 460, 217, 56, 13
+  PUSHBUTTON	"&Close", IDCLOSE, 460, 217, 56, 13
 
   GROUPBOX	"Memory Map", IDC_DBG_GRP_MEMMAP, 114, 3, 142, 142
 
