@@ -37,5 +37,5 @@ BEGIN
                 LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_NOSCROLL, \
                 0,0,360,200, WS_EX_CLIENTEDGE
   SCROLLBAR     IDC_MEM_SB, 360,0,11,195, WS_CHILD | SBS_VERT
-  PUSHBUTTON	"&Close", IDC_MEM_BTN_CLOSE, 315,205,51,14
+  PUSHBUTTON	"&Close", IDCLOSE, 315,205,51,14
 END
