@@ -24,8 +24,3 @@
 */
 
 #define IDD_PICTURE    1200
-#if (WINVER >= 0x0400)
-#define ID_CLOSE       IDCLOSE
-#else
-#define ID_CLOSE       1201
-#endif
