@@ -38,7 +38,7 @@ BEGIN
   PUSHBUTTON "&Decremented", IDC_PF_DEC, 72, 64, 60, 15
   DEFPUSHBUTTON "&Search", IDC_PF_SEARCH, 140, 64, 60, 15
   PUSHBUTTON "&Reset", IDC_PF_RESET, 208, 64, 60, 15
-  PUSHBUTTON "&Close", IDC_PF_CLOSE, 276, 64, 60, 15
+  PUSHBUTTON "&Close", IDCLOSE, 276, 64, 60, 15
 
   EDITTEXT IDC_PF_EDIT, 70, 24, 80, 12, 
     WS_CHILD | WS_VISIBLE, WS_EX_CLIENTEDGE
